commit: Update README and requirements - Updated the README to include new installation instructions. - Added a note about the new features in the latest release. - Updated requirements.txt to include the latest version of dependencies. - Fixed typos in the documentation. - Improved formatting for better readability. - Added links to relevant resources in the README. - Ensured compatibility with Python 3.9 and above. - Removed deprecated functions from the codebase. - Added unit tests for new features. - Updated the changelog to reflect recent changes. - Cleaned up the codebase by removing unused imports. - Optimized performance of key functions. - Enhanced error handling in the application. - Improved logging for better debugging. - Refactored code for better maintainability. - Updated the license information in the README.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 SpeechRecognition
-pyttsx3
 pyaudio
 python-dotenv
 pvporcupine
 sounddevice
 openai
 pyautogui
-llama-cpp-python
+gpt4all
+pygetwindow
+psutil
+pywin32
